# OligoMiner2

./: CNAME  LICENSE  MANIFEST.in  README.md  pyproject.toml
0.0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1/_scripts/: gen_api_pages.py
0.0.1/changelog/: index.html
0.0.1/dev_guide/dev_setup/: index.html
0.0.1/getting_started/installation/: index.html
0.0.1/notebooks/mining_demos/: index.html  mining_demos.ipynb
0.0.1/reference/: index.html
0.0.1/reference/SUMMARY/: index.html
0.0.1/reference/bioinformatics/: index.html
0.0.1/reference/probe_design/: index.html
0.0.1/reference/probe_design/pipeline/: index.html
0.0.1/reference/probe_design/probe_set/: index.html
0.0.1/reference/probe_design/scoring/: index.html
0.0.1/reference/specificity/: index.html
0.0.1/reference/thermodynamics/: index.html
0.0.1/reference/thermodynamics/formamide_correction/: index.html
0.0.1/reference/utils/: index.html
0.0.1/reference/utils/dependencies/: index.html
0.0.1/reference/utils/exceptions/: index.html
0.0.1/reference/utils/file_paths/: index.html
0.0.1/reference/utils/input_dispatch/: index.html
0.0.1/reference/utils/required_files/: index.html
0.0.1/reference/utils/seq_utils/: index.html
0.0.1/reference/utils/shell_pipeline/: index.html
0.0.1/search/: search_index.json
src/oligominer/: __init__.py
src/oligominer/bioinformatics/: __init__.py
src/oligominer/bioinformatics/file_io/: __init__.py  bed_io.py  chrom_sizes.py  classify.py  config.py  exceptions.py  fasta_io.py  fastq_io.py  gtf_io.py  sam_bam_io.py
src/oligominer/bioinformatics/transcriptome/: __init__.py  iso_flatten.py  mine_transcripts.py  transcript_seq.py
src/oligominer/cli/: main.py  test_cli.py
src/oligominer/data/: __init__.py
src/oligominer/data/appending/: __init__.py
src/oligominer/data/test_data/: __init__.py
src/oligominer/probe_design/: __init__.py  pipeline.py  probe_set.py  scoring.py
src/oligominer/specificity/: __init__.py
src/oligominer/thermodynamics/: __init__.py  formamide_correction.py
src/oligominer/utils/: __init__.py  dependencies.py  exceptions.py  file_paths.py  input_dispatch.py  required_files.py  seq_utils.py  shell_pipeline.py
tests/: conftest.py  test_appending.py  test_bam_to_bed.py  test_data_loaders.py  test_duplex_stability.py  test_file_io.py  test_mining.py  test_nupack.py  test_probe_set.py  test_thermodynamics.py  test_utils.py
(+75 files in other folders)
