
#
#   ___  _ _             __  __ _                ____  
#  / _ \| (_) __ _  ___ |  \/  (_)_ __   ___ _ _|___ \ 
# | | | | | |/ _` |/ _ \| |\/| | | '_ \ / _ \ '__|__) |
# | |_| | | | (_| | (_) | |  | | | | | |  __/ |  / __/ 
#  \___/|_|_|\__, |\___/|_|  |_|_|_| |_|\___|_| |_____|
#            |___/                                     
#


#
# project metadata
#

# TODO add more from https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
[project.urls]
homepage = "https://oligominer.org"
source = "https://github.com/conorcamplisson/OligoMiner2"

[project]
name = "oligominer"
dynamic = ["version"]
description = "Python package for genome-scale design of oligo probes for DNA/RNA FISH."
requires-python = ">=3.8,<3.12"
readme = "README.md"
# license = { file = "LICENSE" }
# keywords = ["keyword1", "keyword2", ...]
# documentation = "https://oligominer.org"
authors = [{ name = "Conor Camplisson", email = "conor@oligominer.org" }]
# classifiers = []

#
# required python dependencies
#

dependencies = [
    "biopython",
    "matplotlib",
    "numpy",
    "pandas",
    "primer3-py",
    "pyfaidx",
    "pyranges",
    "xgboost==2.1.1",
    "scikit-learn",
    "biopython",
    
]


#
#  development python dependencies (for docs e.g.)
#

[project.optional-dependencies]
dev = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mkdocstrings[python]",
    "mike",
    "pymdown-extensions",
    "black",

    "notebook",
    "mkdocs-jupyter",
    "pytest",

]


#
# command-line interface
#
[project.scripts]
oligominer = "oligominer.cli.main:main"


#
#  hatchling configuration (build back-end)
#

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oligominer"]

# get version number from single-source of truth src/oligominer/_version.py
[tool.hatch.version]
path = "src/oligominer/_version.py"

# TODO currently required for local nupack install from wheel file
[tool.hatch.metadata]
allow-direct-references = true

#
# publishing configuration (using uv)
#

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
